--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -1,12 +1,86 @@
-﻿<Window x:Class="GearMaster.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GearMaster"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+﻿<Window
+    Height="350"
+    Title="Gear Master"
+    Width="550"
+    mc:Ignorable="d"
+    x:Class="GearMaster.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:GearMaster"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
-        
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+
+        <UniformGrid
+            Grid.Row="0"
+            Margin="8,8,8,0"
+            VerticalAlignment="Top">
+            <TextBlock HorizontalAlignment="Left" Text="Внешний диаметр шестерни (1 - 1000 мм)" />
+            <TextBox HorizontalAlignment="Right" Width="100" />
+        </UniformGrid>
+
+        <UniformGrid
+            Grid.Row="1"
+            Margin="8,8,8,0"
+            VerticalAlignment="Top">
+            <TextBlock HorizontalAlignment="Left" Text="Диаметр посадочного отверстия (1 - 999 мм)" />
+            <TextBox HorizontalAlignment="Right" Width="100" />
+        </UniformGrid>
+
+        <UniformGrid
+            Grid.Row="2"
+            Margin="8,8,8,0"
+            VerticalAlignment="Top">
+            <TextBlock HorizontalAlignment="Left" Text="Толщина шестерни (1 - 1000 мм)" />
+            <TextBox HorizontalAlignment="Right" Width="100" />
+        </UniformGrid>
+
+        <UniformGrid
+            Grid.Row="3"
+            Margin="8,8,8,0"
+            VerticalAlignment="Top">
+            <TextBlock HorizontalAlignment="Left" Text="Количество зубов (3 - 1000 шт.)" />
+            <TextBox HorizontalAlignment="Right" Width="100" />
+        </UniformGrid>
+
+        <UniformGrid
+            Grid.Row="4"
+            Margin="8,8,8,0"
+            VerticalAlignment="Top">
+            <TextBlock HorizontalAlignment="Left" Text="Высота зуба (0,1 - 999 мм)" />
+            <TextBox HorizontalAlignment="Right" Width="100" />
+        </UniformGrid>
+
+
+        <UniformGrid
+            Grid.Row="6"
+            HorizontalAlignment="Left"
+            Margin="8,8,8,0"
+            VerticalAlignment="Top">
+            <Button Name="BuildButton" Width="100">
+                <TextBlock Text="Построить" />
+            </Button>
+        </UniformGrid>
+
+        <UniformGrid
+            Grid.Row="7"
+            Margin="8,8,8,0"
+            VerticalAlignment="Top">
+            <!--  <TextBlock  -->
+            <!--  Background="LightPink"  -->
+            <!--  HorizontalAlignment="Left"  -->
+            <!--  Text="Ошибка: параметр внешний диаметр вне допустимых значений." />  -->
+        </UniformGrid>
     </Grid>
 </Window>
