--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -27,7 +27,10 @@
             Margin="8,8,8,0"
             VerticalAlignment="Top">
             <TextBlock HorizontalAlignment="Left" Text="Внешний диаметр шестерни (1 - 1000 мм)" />
-            <TextBox HorizontalAlignment="Right" Width="100" />
+            <TextBox
+                Background="LightPink"
+                HorizontalAlignment="Right"
+                Width="100" />
         </UniformGrid>
 
         <UniformGrid
@@ -35,7 +38,10 @@
             Margin="8,8,8,0"
             VerticalAlignment="Top">
             <TextBlock HorizontalAlignment="Left" Text="Диаметр посадочного отверстия (1 - 999 мм)" />
-            <TextBox HorizontalAlignment="Right" Width="100" />
+            <TextBox
+                Background="LightPink"
+                HorizontalAlignment="Right"
+                Width="100" />
         </UniformGrid>
 
         <UniformGrid
@@ -77,10 +83,9 @@
             Grid.Row="7"
             Margin="8,8,8,0"
             VerticalAlignment="Top">
-            <!--  <TextBlock  -->
-            <!--  Background="LightPink"  -->
-            <!--  HorizontalAlignment="Left"  -->
-            <!--  Text="Ошибка: параметр внешний диаметр вне допустимых значений." />  -->
+            <TextBlock Background="LightPink" HorizontalAlignment="Left">
+                Ошибка: параметр Внешний диаметр шестерни не должен быть меньше<LineBreak />
+                параметра Диаметр посадочного отверстия.</TextBlock>
         </UniformGrid>
     </Grid>
 </Window>
