--- a/GearMaster/MainWindow.xaml
+++ b/GearMaster/MainWindow.xaml
@@ -101,7 +101,7 @@
             x:Name="ToothHeight" />
 
         <Button
-            Command="{Binding BuildCommand}"
+            Command="{Binding BuildGearCommand}"
             Content="Построить"
             Grid.Column="0"
             Grid.Row="5"
