--- a/GearMaster/MainWindow.xaml
+++ b/GearMaster/MainWindow.xaml
@@ -1,5 +1,4 @@
 ﻿<Window
-    DataContext="MainVM"
     Height="auto"
     Title="Gear Master"
     Width="auto"
@@ -64,8 +63,9 @@
             Grid.Row="0"
             Height="20"
             HorizontalAlignment="Right"
+            Text="{Binding GearParametersVM[ParameterType.OuterRadius].Value}"
             Width="100"
-            x:Name="OuterGearDiameter" />
+            x:Name="OuterRadius" />
 
         <TextBox
             Background="White"
@@ -74,7 +74,7 @@
             Height="20"
             HorizontalAlignment="Right"
             Width="100"
-            x:Name="HoleDiameter" />
+            x:Name="HoleRadius" />
 
         <TextBox
             Grid.Column="1"
@@ -106,14 +106,16 @@
             Grid.Column="0"
             Grid.Row="5"
             HorizontalAlignment="Left"
-            IsEnabled="{Binding IsAbleToBuild}"
-            Name="BuildButton"
-            Width="100" />
+            IsEnabled="{Binding IsAbleToBuild, Mode=TwoWay}"
+            Width="100"
+            x:Name="BuildButton" />
 
         <TextBlock
             Background="White"
             Grid.Column="0"
             Grid.Row="6"
-            HorizontalAlignment="Left" />
+            HorizontalAlignment="Left"
+            Text="{Binding ValidationErrorMessage}"
+            x:Name="ErrorMessageTextBlock" />
     </Grid>
 </Window>
