--- a/GearMaster/MainWindow.xaml
+++ b/GearMaster/MainWindow.xaml
@@ -5,119 +5,29 @@
     mc:Ignorable="d"
     x:Class="GearMaster.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:collections="clr-namespace:System.Collections;assembly=mscorlib"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:GearMaster"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModel="clr-namespace:ViewModel;assembly=ViewModel"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Grid d:DataContext="{d:DesignInstance viewModel:MainVM}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="25" />
-            <RowDefinition Height="25" />
-            <RowDefinition Height="25" />
-            <RowDefinition Height="25" />
-            <RowDefinition Height="25" />
-            <RowDefinition Height="25" />
-            <RowDefinition Height="auto" />
-        </Grid.RowDefinitions>
+    <StackPanel d:DataContext="{d:DesignInstance viewModel:MainVM}">
+        <local:ParameterControl DataContext="{Binding ParametersVM[ParameterType.OuterRadius]}" x:Name="OuterRadiusParameter" />
 
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="auto" />
-        </Grid.ColumnDefinitions>
+        <local:ParameterControl DataContext="{Binding ParametersVM[ParameterType.HoleRadius]}" x:Name="HoleRadiusParameter" />
 
-        <TextBlock
-            Grid.Column="0"
-            Grid.Row="0"
-            HorizontalAlignment="Left"
-            Text="Внешний радиус шестерни (1 - 1000 мм)" />
+        <local:ParameterControl DataContext="{Binding ParametersVM[ParameterType.Thickness]}" x:Name="ThicknessParameter" />
 
-        <TextBlock
-            Grid.Column="0"
-            Grid.Row="1"
-            HorizontalAlignment="Left"
-            Text="Радиус посадочного отверстия (1 - 999 мм)" />
+        <local:ParameterControl DataContext="{Binding ParametersVM[ParameterType.ToothHeight]}" x:Name="ToothHeightParameter" />
 
-        <TextBlock
-            Grid.Column="0"
-            Grid.Row="2"
-            HorizontalAlignment="Left"
-            Text="Толщина шестерни (1 - 1000 мм)" />
-
-        <TextBlock
-            Grid.Column="0"
-            Grid.Row="3"
-            HorizontalAlignment="Left"
-            Text="Высота зуба (0,1 - 999 мм)" />
-
-        <TextBlock
-            Grid.Column="0"
-            Grid.Row="4"
-            HorizontalAlignment="Left"
-            Text="Количество зубов (3 - 1000 шт.)" />
-
-        <TextBox
-            Background="white"
-            Grid.Column="1"
-            Grid.Row="0"
-            Height="20"
-            HorizontalAlignment="Right"
-            TextChanged="OuterRadius_OnTextChanged"
-            Width="100"
-            x:Name="OuterRadius" />
-
-        <TextBox
-            Background="White"
-            Grid.Column="1"
-            Grid.Row="1"
-            Height="20"
-            HorizontalAlignment="Right"
-            TextChanged="HoleRadius_OnTextChanged"
-            Width="100"
-            x:Name="HoleRadius" />
-
-        <TextBox
-            Grid.Column="1"
-            Grid.Row="2"
-            Height="20"
-            HorizontalAlignment="Right"
-            TextChanged="Thickness_OnTextChanged"
-            Width="100"
-            x:Name="Thickness" />
-
-        <TextBox
-            Grid.Column="1"
-            Grid.Row="3"
-            Height="20"
-            HorizontalAlignment="Right"
-            TextChanged="ToothHeight_OnTextChanged"
-            Width="100"
-            x:Name="ToothHeight" />
-
-        <TextBox
-            Grid.Column="1"
-            Grid.Row="4"
-            Height="20"
-            HorizontalAlignment="Right"
-            TextChanged="ToothCount_OnTextChanged"
-            Width="100"
-            x:Name="ToothCount" />
+        <local:ParameterControl DataContext="{Binding ParametersVM[ParameterType.ToothCount]}" x:Name="ToothCountParameter" />
 
         <Button
             Click="BuildButton_OnClick"
-            Content="Построить"
-            Grid.Column="0"
-            Grid.Row="5"
             HorizontalAlignment="Left"
             Width="100"
             x:Name="BuildButton" />
 
-        <TextBlock
-            Background="White"
-            Grid.Column="0"
-            Grid.Row="6"
-            HorizontalAlignment="Left"
-            x:Name="ErrorMessageTextBlock" />
-    </Grid>
+        <TextBlock x:Name="ErrorMessageTextBlock" />
+    </StackPanel>
 </Window>
