--- a/GearMaster/ParameterControl.xaml
+++ b/GearMaster/ParameterControl.xaml
@@ -31,6 +31,7 @@
             Grid.Row="0"
             Height="20"
             HorizontalAlignment="Right"
+            KeyDown="ParameterValueTextBox_OnKeyDown"
             Text="{Binding Value}"
             Width="100"
             x:Name="ParameterValueTextBox" />
